--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,6 @@
     <string name="status_incubating">募資中</string>
     <string name="status_success">募資成功</string>
     <string name="status_published">已開課</string>
-    <string name="goalTime">倒數</string>
-    <string name="person">人</string>
+    <string name="goalTime">倒數 %d 天</string>
+    <string name="person">%1$d / %2$d 人</string>
 </resources>
